--- a/index.html
+++ b/index.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<title>anime Testing</title>
 </head>
 
 <body>
-	<select v-model="year">
-		<option value="">所有年份</option>
-		<template v-for="yop in yearOption">
-			<option v-bind:value="yop" v-if="yop == thisYear" selected="selected">{{yop}}</option>
-			<option v-bind:value="yop" v-else>{{yop}}</option>
-		</template>	
-	</select>
-	<select v-model="season">
-		<option value="">所有季节</option>
-		<template v-for="sop in seasonOption">
-			<option v-bind:value="sop.value" v-if="sop.value == thisSeason" selected="selected">{{sop.text}}</option>
-			<option v-bind:value="sop.value" v-else>{{sop.text}}</option>
-		</template>	
-	</select>
-	<input type="text" v-model="name" placeholder="type the name">
-	<template v-for="item in anime | filterBy year in 'year' | filterBy season in 'season' | filterBy name in 'name' |orderBy 'year' ">
-		<div>{{ item.name }}{{ item.site }}</div>
-	</template>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#search" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Brand</a>
+			</div>
+			<div class="navbar-collapse collapse" id="search" aria-expanded="false">
+				<form class="navbar-form navbar-left" role="search">
+					<div class="form-group">
+						<input type="text" v-model="name" class="form-control" placeholder="Search">
+					</div>
+				</form> 
+			</div>
+		</div>
+	</nav>
+	<div class="container" v-if="!name">
+		<div class="page-header">
+		<h1>{{year}}{{season}}季番</h1>
+		</div>
+		<form class="form-inline">
+			<div class="form-group">
+				<select v-model="year" class="form-control">
+					<template v-for="yop in yearOption">
+						<option v-bind:value="yop" v-if="yop == thisYear" selected="selected">{{yop}}</option>
+						<option v-bind:value="yop" v-else>{{yop}}</option>
+					</template>	
+				</select>
+			</div>
+			<div class="form-group">
+				<select v-model="season" class="form-control">
+					<template v-for="sop in seasonOption">
+						<option v-bind:value="sop.value" v-if="sop.value == thisSeason" selected="selected">{{sop.text}}</option>
+						<option v-bind:value="sop.value" v-else>{{sop.text}}</option>
+					</template>	
+				</select>
+			</div>						
+		</form>
+		<div class="display">
+			<template v-for="item in anime | filterBy year in 'year' | filterBy season in 'season' | filterBy name in 'name' |orderBy 'year' ">
+				<div>
+					<img src="./img/{{item.img}}" alt="{{item.name}}">
+					{{item.name}}
+					<template v-for="site in anime[$index].sites">
+						<span>{{site}}{{item.url[$index]}}</span>
+					</template>
+				</div>
+			</template>
+		</div>
+	</div>
+	<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/data.js"></script>
 	<script type="text/javascript" src="./js/vue.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
