--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 	<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/data.js"></script>
-	<script type="text/javascript" src="./js/vue.js"></script>
+	<script type="text/javascript" src="./js/vue.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
