--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="zh">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -60,7 +61,7 @@
 					<img src="{{item.img}}" alt="{{item.name}}">
 					<div class="caption"><h3>{{item.name}}</h3>
 						<p>{{item.year}}{{item.season}}番</p>
-						<template v-for="site in anime[$index].sites">
+						<template v-for="site in item.sites">
 							<a href="{{item.url[$index]}}" class="btn {{item.class[$index]}}" target="_blank">{{site}}</a>
 							{{{&nbsp;}}}
 						</template>
@@ -76,7 +77,7 @@
 					<img src="{{item.img}}" alt="{{item.name}}">
 					<div class="caption"><h3>{{item.name}}</h3>
 						<p>{{item.year}}{{item.season}}番</p>
-						<template v-for="site in anime[$index].sites">
+						<template v-for="site in item.sites">
 							<a href="{{item.url[$index]}}" class="btn {{item.class[$index]}}" target="_blank">{{site}}</a>
 							{{{&nbsp;}}}
 						</template>
@@ -88,7 +89,7 @@
 	<footer>
 		<div class="container">
 			<p>built by <a href="http://cn.vuejs.org/" target="_blank">vue.js</a>  and <a href="http://v3.bootcss.com/" target="_blank">bootstrap</a></p>
-			<p><a href="https://github.com/zombielive/anime" target="_blank">github</a> | <a href="https://github.com/zombielive/anime/issues" target="_blank">建议与意见</a></p>
+			<p><a href="https://github.com/zombielive/anime" target="_blank">github</a> | <a href="https://github.com/zombielive/anime/issues" target="_blank">吐槽与建议</a></p>
 		</div>
 	</footer>
 	<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
